# OligoMCP

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  server.py
config/: SETD5_e1.json  SETD5_e2.json  SMN2.json  SMN2_patient.json
data/: alphagenome_ontology_terms.meta.txt  alphagenome_ontology_terms.tsv
src/oligoclaude/: __init__.py  _spliceai_model.py  alphagenome_predict.py  aso_enum.py  bed_export.py  cli.py  config.py  experimental.py  mcp_server.py  plot.py  predict.py  resources.py  sequence_utils.py  spliceai_fetch.py  spliceai_predict.py  workflow.py
src/oligomcp/: cli.py  config.py  mcp_server.py  ontology.py  output.py  predict.py  resources.py  variants.py  workflow.py
tests/: test_aso_enum.py  test_bed_export.py  test_config.py  test_experimental.py  test_predict_needs_info.py  test_sequence_utils.py  test_variants.py
