[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oligoclaude"
version = "0.1.0"
description = "ASO efficacy prediction using AlphaGenome and SpliceAI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Baek-Donghyeon" }]
dependencies = [
    "alphagenome",
    "torch>=2.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "biopython>=1.83",
    "pyfaidx>=0.8",
    "tqdm>=4.66",
    "mcp>=1.2",
    # SpliceAI auto-installs on Linux/macOS (including Prefect Horizon /
    # FastMCP Cloud). Skipped on Windows because its pysam transitive dep
    # has no Windows wheels — Windows users should run
    # `pip install openspliceai --no-deps` separately (OligoClaude only
    # imports the pysam-free `openspliceai.train_base.openspliceai.SpliceAI`
    # path).
    "openspliceai ; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]
# Backwards-compat alias: `pip install -e .[spliceai]` still works even
# though openspliceai is already in main deps on non-Windows platforms.
spliceai = ["openspliceai"]

[project.scripts]
oligoclaude = "oligoclaude.cli:main"
oligoclaude-mcp = "oligoclaude.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oligoclaude = ["py.typed"]
